# autonomous-workstream

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
autows/: __init__.py  __main__.py  audit.py  cli.py  config.py  gitutil.py  hooks.py  lessons.py  outcomes.py  process.py  prompts.py  safety_core.py  safety_core.sha256
autows/backends/: README.md  __init__.py  base.py  claude.py  codex.py
docs/journal/: LESSONS.md
skills/autonomous-workstream/: OPERATOR_GUIDE.md  SKILL.md  TROUBLESHOOTING.md
skills/autonomous-workstream/assets/: SETUP.md
skills/autonomous-workstream/assets/scripts/: answer_question.ps1  install_safety_hooks.ps1  spawn_headless_session.ps1  spawn_phase_session.ps1
tests/: test_backends.py  test_cli.py  test_hook.py  test_improve.py  test_lessons.py  test_process.py  test_safety_core.py
